refactor: upgrade to Spring Boot 4.0.1 + Java 25 with full codebase   optimization
  - Upgrade Spring Boot 2.5.4 → 4.0.1, Java 17 → 25, Gradle 7.6 → 9.4.1
  - Enable virtual threads and ZGC Generational for high concurrency and low latency
  - Unify constructor injection (@RequiredArgsConstructor + final) across all beans
  - Fix thread safety: remove mutable instance fields from singleton LineServiceImpl
  - Convert entity classes to plain POJOs (remove @Component/@Scope)
  - Use Java records for Status and ErroeResponse DTOs
  - Use switch expressions in weather data parsing
  - Async startup with CompletableFuture (~3s boot instead of ~3min)
  - Fix thread-safe JsonConverter (immutable shared ObjectMapper)
  - Modernize Dockerfile: 2-stage Alpine build (JDK 25 → JRE 25), ZGC flags
  - Fix SB4 config: spring.mongodb.* prefix, spring.data.redis.*, allowedOriginPatterns
  - Remove dead code: Firebase, RabbitMQ, DGS/GraphQL, RestTemplateUtil (7 files deleted)
  - Remove System.gc(), e.printStackTrace() → log.error(), secure webhook logging
  - Update README with current tech stack